--- a/SpiceMarket_Web.Presentation/Views/Shared/_Layout.cshtml
+++ b/SpiceMarket_Web.Presentation/Views/Shared/_Layout.cshtml
@@ -27,11 +27,12 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="@Url.Action("Cos", "Home")">
-                            <img src="../Content/images/cart.png" alt="Coș" style="height: 24px; width: 24px;" />
+                            <img src="~/Content/images/cart.png" alt="Coș" style="height:24px;width:24px;" />
                         </a>
                     </li>
                     @{
                         var user = Session["Utilizator"] as string;
+                        var rol = Session["Rol"] as string;
                         if (string.IsNullOrEmpty(user))
                         {
                             <li><a href="@Url.Action("Autentificare", "Home")">Autentificare</a></li>
@@ -39,10 +40,17 @@
                         else
                         {
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                                   role="button" aria-haspopup="true" aria-expanded="false">
                                     <span class="glyphicon glyphicon-user"></span> @user <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
+                                    @* If admin, show dashboard link *@
+                                    @if (rol == "admin")
+                                    {
+                                        <li>@Html.ActionLink("Admin Dashboard", "Dashboard", "Admin")</li>
+                                        <li role="separator" class="divider"></li>
+                                    }
                                     <li>@Html.ActionLink("Achiziții anterioare", "Achizitii", "Home")</li>
                                     <li>@Html.ActionLink("Profil", "Profil", "Home")</li>
                                     <li>@Html.ActionLink("Setări cont", "Setari", "Home")</li>
