--- a/SpiceMarket_Web.Presentation/Views/Shared/_Layout.cshtml
+++ b/SpiceMarket_Web.Presentation/Views/Shared/_Layout.cshtml
@@ -202,6 +202,10 @@
             }
         });
     </script>
+    @if (Session["Utilizator"] != null)
+    {
+        <li><a href="@Url.Action("Lista", "Wishlist")">💖 Wishlist</a></li>
+    }
 
 
 
