--- a/SpiceMarket_Web.Presentation/Views/Shared/_Layout.cshtml
+++ b/SpiceMarket_Web.Presentation/Views/Shared/_Layout.cshtml
@@ -206,6 +206,11 @@
     {
         <li><a href="@Url.Action("Lista", "Wishlist")">💖 Wishlist</a></li>
     }
+    @if (Session["Utilizator"] != null)
+    {
+        <li><a href="@Url.Action("Profil", "ContController")">Profil</a></li>
+    }
+
 
 
 
