--- a/SpiceMarket_Web.Presentation/Views/Home/Cos.cshtml
+++ b/SpiceMarket_Web.Presentation/Views/Home/Cos.cshtml
@@ -10,12 +10,7 @@
         new SpiceMarket_Web.Domain.Models.Produs { Nume = "Ghimbir", Pret = 60m },
         new SpiceMarket_Web.Domain.Models.Produs { Nume = "Paprika", Pret = 75m },
         new SpiceMarket_Web.Domain.Models.Produs { Nume = "Cardamom", Pret = 120m },
-        new SpiceMarket_Web.Domain.Models.Produs { Nume = "Turmeric", Pret = 70m },
-        new SpiceMarket_Web.Domain.Models.Produs { Nume = "Piper Negru", Pret = 10m },
-        new SpiceMarket_Web.Domain.Models.Produs { Nume = "Sare de Himalaya", Pret = 8m },
-        new SpiceMarket_Web.Domain.Models.Produs { Nume = "Chili Pudra", Pret = 12m },
-        new SpiceMarket_Web.Domain.Models.Produs { Nume = "Boia Dulce", Pret = 9m },
-        new SpiceMarket_Web.Domain.Models.Produs { Nume = "Cimbru Uscat", Pret = 7m }
+        new SpiceMarket_Web.Domain.Models.Produs { Nume = "Turmeric", Pret = 70m }
     };
 
     // Calculate the total price
