--- a/SpiceMarket_Web.Presentation/Views/Shared/_Layout.cshtml
+++ b/SpiceMarket_Web.Presentation/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - SpiceMarket</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="@Url.Action("Cos", "Home")">
-                            <img src="~/Content/images/cart.png" alt="Coș" style="height:24px;width:24px;" />
+                            <img src="@Url.Content("~/Content/images/cart.png")" alt="Coș" style="height:24px;width:24px;" />
                         </a>
                     </li>
                     @{
@@ -45,7 +45,6 @@
                                     <span class="glyphicon glyphicon-user"></span> @user <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    @* If admin, show dashboard link *@
                                     @if (rol == "admin")
                                     {
                                         <li>@Html.ActionLink("Admin Dashboard", "Dashboard", "Admin")</li>
